--- a/Scripts/Analysis.ipynb
+++ b/Scripts/Analysis.ipynb
@@ -20,7 +20,7 @@
     "import re\n",
     "\n",
     "def extract_parts(filename):\n",
-    "    match = re.match(r'(Diz|Val)_(\\d+)_(?:CT|T)(\\d+)', filename)\n",
+    "    match = re.match(r'(Diz|Val)_(\\d+)_T(\\d+)', filename)\n",
     "    if match:\n",
     "        prefix = match.group(1)\n",
     "        part1 = int(match.group(2))\n",
@@ -50,7 +50,7 @@
     "import pandas as pd\n",
     "\n",
     "# Specify the folder path\n",
-    "folder_path = r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Val_sensor\"     # Change this to the folder's path\n",
+    "folder_path = r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Documents\\GitHub\\GaitValidation\\sensor data\\SENSOR REPORT\"     # Change this to the folder's path\n",
     "\n",
     "# List all files in the specified folder\n",
     "files = os.listdir(folder_path)\n",
@@ -77,9 +77,7 @@
     "\n",
     "trial_names = []\n",
     "\n",
-    "# avg_stance2swing_left_list = []\n",
-    "# avg_stance2swing_right_list = []\n",
-    "# avg_single2double_list = []\n",
+    "\n",
     "\n",
     "for file_name in files: \n",
     "    \n",
@@ -108,9 +106,7 @@
     "    elif 'Velocity [mph]' in df.columns:\n",
     "        velocity = df['Velocity [mph]'] * 0.44704  # Convert from mph to m/s    \n",
     "\n",
-    "    # stance2swing_left = stance_time_left/swing_time_left\n",
-    "    # stance2swing_right = stance_time_right/swing_time_right\n",
-    "    # single2double = swing_time/double_time \n",
+    "\n",
     "################ append \n",
     "    avg_stance_time_left_list.append(stance_time_left)\n",
     "    avg_stance_time_right_list.append(stance_time_right)\n",
@@ -131,9 +127,6 @@
     "    avg_step_time_list.append(step_time)\n",
     "    trial_names.append(file_name)\n",
     "\n",
-    "    # avg_stance2swing_left_list.append(stance2swing_left)\n",
-    "    # avg_stance2swing_right_list.append(stance2swing_right)\n",
-    "    # avg_single2double_list.append(single2double) \n",
     "    \n",
     "gaitcycletime_dict = {\n",
     "'trial name': trial_names,\n",
@@ -152,9 +145,6 @@
     "'avg_steptime_right': avg_step_time_right_list, \n",
     "'avg_steplength_left': avg_step_length_left_list, \n",
     "'avg_steplength_right': avg_step_length_right_list, \n",
-    "# 'avg_stance2swing_left': avg_stance2swing_left_list,\n",
-    "# 'avg_stance2swing_right': avg_stance2swing_right_list,\n",
-    "# 'avg_single2double': avg_single2double_list, \n",
     "}\n",
     "\n",
     "# Initialize an empty dictionary to store the flattened sensor data\n",
@@ -174,7 +164,7 @@
     "df_results_sensor_dict = pd.DataFrame(sensor_cycletime_dict)\n",
     "\n",
     "# Save to Excel\n",
-    "df_results_sensor_dict.to_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\gait_analysis_results_sensor.xlsx\", index=False)\n",
+    "df_results_sensor_dict.to_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Documents\\GitHub\\GaitValidation\\sensor result\", index=False)\n",
     "\n",
     "print(\"Excel file 'gait_analysis_results_sensor.xlsx' has been saved successfully.\")"
    ]
@@ -198,7 +188,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "save_path = r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\"\n",
+    "# save_path = r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\"\n",
     "\n",
     "def corri(feature, left_video, right_video, left_sensor, right_sensor):\n",
     "    \n",
@@ -230,11 +220,11 @@
     "    # Add a legend\n",
     "    plt.legend()\n",
     "\n",
-    "    if save_path:\n",
-    "        filename = f\"{feature}_correlation_plot.png\"\n",
-    "        full_path = os.path.join(save_path, filename)\n",
-    "        plt.savefig(full_path, dpi=300)\n",
-    "        print(f\"Figure saved to: {full_path}\")\n",
+    "    # if save_path:\n",
+    "    #     filename = f\"{feature}_correlation_plot.png\"\n",
+    "    #     full_path = os.path.join(save_path, filename)\n",
+    "    #     plt.savefig(full_path, dpi=300)\n",
+    "    #     print(f\"Figure saved to: {full_path}\")\n",
     "            \n",
     "    # Show the plot\n",
     "    plt.show()\n",
@@ -266,11 +256,11 @@
     "    # Add a legend\n",
     "    plt.legend()\n",
     "\n",
-    "    if save_path:\n",
-    "        filename = f\"{feature}_combined_correlation_plot.png\"\n",
-    "        full_path = os.path.join(save_path, filename)\n",
-    "        plt.savefig(full_path, dpi=300)\n",
-    "        print(f\"Figure saved to: {full_path}\")\n",
+    "    # if save_path:\n",
+    "    #     filename = f\"{feature}_combined_correlation_plot.png\"\n",
+    "    #     full_path = os.path.join(save_path, filename)\n",
+    "    #     plt.savefig(full_path, dpi=300)\n",
+    "    #     print(f\"Figure saved to: {full_path}\")\n",
     "            \n",
     "    # Show the plot\n",
     "    plt.show()"
@@ -289,18 +279,7 @@
     "df_sensor = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\large model\\gait_analysis_results_sensor.xlsx\")\n",
     "\n",
     "# Read the second Excel file\n",
-    "df_video = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\large model\\gait_analysis_results_video_mirror.xlsx\")\n",
-    "df_video_mirror = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\large model\\gait_analysis_results_video_ori.xlsx\")\n",
-    "\n",
-    "# Identify numeric columns\n",
-    "numeric_cols = df_video.select_dtypes(include=['number']).columns\n",
-    "\n",
-    "# Copy the text columns from the first file\n",
-    "df_avg = df_video.copy()\n",
-    "\n",
-    "# Average the numeric columns only\n",
-    "df_avg[numeric_cols] = (df_video[numeric_cols] + df_video_mirror[numeric_cols]) / 2\n",
-    "\n",
+    "df_avg = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\large model\\gait_analysis_results_video.xlsx\")\n",
     "\n",
     "leftright_columns_of_interest = [\n",
     "    'avg_stancetime_left',\n",
@@ -321,11 +300,7 @@
     "\n",
     "\n",
     "### find specific files\n",
-    "# Assuming df_sensor is a DataFrame where the first column has file names\n",
-    "file_names = df_sensor.iloc[:, 0]  # First column contains file names\n",
-    "# Get indices where 'CT' appears in the filename\n",
-    "ct_indices = file_names[file_names.str.contains('CT', case=False, na=False)].index.tolist()\n",
-    "\n",
+    "# for large model to remove below files\n",
     "# sensorproblem\n",
     "indices_sensorproblem = df_sensor['avg_steplength_left'][df_sensor['avg_steplength_left'] > 1].index.tolist()  ## VAL005\n",
     "\n",
@@ -333,46 +308,10 @@
     "condition = (df_avg['avg_doublesupporttime'] > 0.255) & (df_sensor['avg_doublesupporttime'] < 0.195)\n",
     "fastwalker_indices = df_avg['avg_doublesupporttime'][condition].index.tolist()   ## some trials of VAL007 and VAL013, and val024\n",
     "\n",
+    "# extra files to remove for small model \n",
     "# outlier for small model \n",
     "condition = (df_avg['avg_stancetime_left'] < 0.3)\n",
     "outlier_small = df_avg['avg_stancetime_left'][condition].index.tolist() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "3833f577-2a3e-4427-8045-233d4c4996a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Val_005_T1.csv\n",
-      "Val_005_T2.csv\n",
-      "Val_005_T3.csv\n",
-      "Val_005_T4.csv\n",
-      "Val_005_T5.csv\n",
-      "Val_005_T6.csv\n",
-      "Val_005_T7.csv\n",
-      "Val_005_T8.csv\n",
-      "Val_005_T9.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "for index in indices_sensorproblem:\n",
-    "    print(file_names[index])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "6c93f815-e8cf-41ee-9110-2f2e6ad83eb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_avg.to_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\gait_analysis_results_video.xlsx\", index=False)"
    ]
   },
   {
@@ -458,8 +397,11 @@
     "indices = leftright_column_indexes  # Specific indices\n",
     "\n",
     "# # Define indices to remove\n",
-    "indices_to_remove = set(ct_indices + indices_sensorproblem + fastwalker_indices + outlier_small) \n",
-    "# indices_to_remove = set(ct_indices + indices_sensorproblem + fastwalker_indices)  \n",
+    "# large model outlier\n",
+    "indices_to_remove = set(ct_indices + indices_sensorproblem + fastwalker_indices) \n",
+    "## small model outlier \n",
+    "# indices_to_remove = set(ct_indices + indices_sensorproblem + fastwalker_indices + outlier_small) \n",
+    " \n",
     "\n",
     "\n",
     "for i in indices:\n",
@@ -659,7 +601,7 @@
     "    \"avg_steptime\", \"avg_steplength\", \"avg_velocity\", \"avg_cadence\"\n",
     "]\n",
     "\n",
-    "df = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\sensor_all_df.xlsx\", sheet_name=\"Sheet1\")\n",
+    "df = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Documents\\GitHub\\GaitValidation\\LLM analysis\\large model\", sheet_name=\"Sheet1\")\n",
     "# Ensure 'group' and 'sex' are treated as categorical variables\n",
     "df['Group'] = df['Group'].astype('category')\n",
     "df['Gender'] = df['Gender'].astype('category')  # Assuming 'sex' is coded like 'Male'/'Female'\n",
