--- a/Scripts/PosePipeline.ipynb
+++ b/Scripts/PosePipeline.ipynb
@@ -321,7 +321,7 @@
     "    return int_data\n",
     "\n",
     "def extract_parts(filename):\n",
-    "    match = re.match(r'(Diz|Val)_(\\d+)_(?:CT|T)(\\d+)', filename)\n",
+    "    match = re.match(r'(Diz|Val)_(\\d+)_T(\\d+)', filename)\n",
     "    if match:\n",
     "        prefix = match.group(1)\n",
     "        part1 = int(match.group(2))\n",
