--- a/Scripts/Analysis-LMM.ipynb
+++ b/Scripts/Analysis-LMM.ipynb
@@ -23,7 +23,7 @@
     "    \"avg_steptime\", \"avg_steplength\", \"avg_velocity\", \"avg_cadence\"\n",
     "]\n",
     "\n",
-    "df = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Documents\\GitHub\\GaitValidation\\LLM analysis\\large model\", sheet_name=\"Sheet1\")\n",
+    "df = pd.read_excel(r\"./LLM analysis/large model/video_all_df.xlsx\"\", sheet_name=\"Sheet1\")\n",
     "# Ensure 'group' and 'sex' are treated as categorical variables\n",
     "df['Group'] = df['Group'].astype('category')\n",
     "df['Gender'] = df['Gender'].astype('category')  # Assuming 'sex' is coded like 'Male'/'Female'\n",
