--- a/Scripts/Correlation-large model.ipynb
+++ b/Scripts/Correlation-large model.ipynb
@@ -99,10 +99,10 @@
     "import pandas as pd\n",
     "\n",
     "# Read the first Excel file\n",
-    "df_sensor = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\large model\\gait_analysis_results_sensor.xlsx\")\n",
+    "df_sensor = pd.read_excel(r\"./feature output/large model/gait_analysis_results_sensor.xlsx\")\n",
     "\n",
     "# Read the second Excel file\n",
-    "df_avg = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\large model\\gait_analysis_results_video.xlsx\")\n",
+    "df_avg = pd.read_excel(r\"./feature output/large model/gait_analysis_results_video.xlsx\")\n",
     "\n",
     "leftright_columns_of_interest = [\n",
     "    'avg_stancetime_left',\n",
