--- a/Scripts/Output Sensor result.ipynb
+++ b/Scripts/Output Sensor result.ipynb
@@ -42,7 +42,7 @@
     "import pandas as pd\n",
     "\n",
     "# Specify the folder path\n",
-    "folder_path = r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Documents\\GitHub\\GaitValidation\\sensor data\\SENSOR REPORT\"     # Change this to the folder's path\n",
+    "folder_path = r\"./sensor data/SENSOR REPORT\"     # Change this to the folder's path\n",
     "\n",
     "# List all files in the specified folder\n",
     "files = os.listdir(folder_path)\n",
@@ -166,7 +166,7 @@
     "df_results_sensor_dict = pd.DataFrame(sensor_cycletime_dict)\n",
     "\n",
     "# Save to Excel\n",
-    "df_results_sensor_dict.to_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Documents\\GitHub\\GaitValidation\\sensor result\", index=False)\n",
+    "df_results_sensor_dict.to_excel(r\"./sensor data/sensor result.xlsx\", index=False)\n",
     "\n",
     "print(\"Excel file 'gait_analysis_results_sensor.xlsx' has been saved successfully.\")"
    ]
