--- a/Scripts/PosePipeline.ipynb
+++ b/Scripts/PosePipeline.ipynb
@@ -183,7 +183,7 @@
     "# set up\n",
     "height_cm = 166 \n",
     "# Set up directories\n",
-    "input_dir = \"../Downloads/DEMO\"\n",
+    "input_dir = \"./DEMO\"\n",
     "\n",
     "Output_dir = os.path.join(os.path.dirname(input_dir), \"Results\")\n",
     "output_dir = os.path.join(os.path.dirname(input_dir), \"Results\", \"mirror_video\")\n",
