--- a/Scripts/Correlation-small model.ipynb
+++ b/Scripts/Correlation-small model.ipynb
@@ -100,10 +100,10 @@
     "import pandas as pd\n",
     "\n",
     "# Read the first Excel file\n",
-    "df_sensor = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\small model\\sensor.xlsx\")\n",
+    "df_sensor = pd.read_excel(r\"./feature output/small model/sensor.xlsx\")\n",
     "\n",
     "# Read the second Excel file\n",
-    "df_avg = pd.read_excel(r\"C:\\Users\\shuyu.liu\\OneDrive - University of Florida\\Desktop\\OAKS DATA\\Results\\small model\\gait_analysis_results_video_small.xlsx\")\n",
+    "df_avg = pd.read_excel(r\"./feature output/small model/gait_analysis_results_video_small.xlsx\")\n",
     "\n",
     "leftright_columns_of_interest = [\n",
     "    'avg_stancetime_left',\n",
